Fixed cards on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,15 +52,15 @@ body{
 }
 @media screen and (max-width:600px){
     div#cardWrapper {
-        width: 80%;
-        margin: 0px auto;
+        /* width: 91%; */
+        /* margin: 0px auto; */
+        /* border: 1px solid red; */
     }
     .card-image img{
         width: 100%;
     }
     .card{
         width: 100%;
-        margin: 20px auto;
     }   
 }
 .card-content{
@@ -134,6 +134,9 @@ body{
     }
     .card{
         width: 200px;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
     .card-image{
         width: 200px;
@@ -144,6 +147,9 @@ body{
     .card{
         width: 39.5%;
         height: auto;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
 
     .card-content {
@@ -159,6 +165,9 @@ body{
     .card{
         width: 406px;
         height: auto;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
 
     .card-wrapper {
@@ -177,6 +186,9 @@ body{
 @media screen and (width: 411px){
     .card {
         width: 325px;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
 
     .card-wrapper {
@@ -191,6 +203,9 @@ body{
 @media screen and (width: 320px){
     .card {
         width: 240px;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
 
     .card-wrapper {
@@ -213,12 +228,50 @@ body{
 
     .card{
         width: 76%;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
 }
 
 @media screen and (width: 375px){
     .card {
         width: 293px;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
+    }
+    .card-wrapper {
+        width: 100%;
+    }
+
+    .card-image{
+        width: 100%;
+    }
+}
+
+@media screen and (width: 384px){
+    .card {
+        width: 293px;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
+    }
+    .card-wrapper {
+        width: 100%;
+    }
+
+    .card-image{
+        width: 100%;
+    }
+}
+
+@media screen and (width: 412px){
+    .card {
+        width: 293px;
+        margin: 0px auto;
+        margin-left: 14%;
+        margin-top: 20px;
     }
     .card-wrapper {
         width: 100%;
@@ -232,6 +285,9 @@ body{
 @media screen and (width: 414px){
     .card {
         width: 337px;
+        margin: 0px auto;
+        margin-left: 12%;
+        margin-top: 20px;
     }
     .card-wrapper{
         width: 100%;
@@ -248,4 +304,49 @@ body{
 .hero{
     color:white;
     text-align: center;
+}
+@media screen and (width: 480px){
+    .card {
+        width: 293px;
+        margin: 0px auto;
+        margin-left: 20%;
+        margin-top: 20px;
+    }
+    .card-wrapper {
+        width: 100%;
+    }
+
+    .card-image{
+        width: 100%;
+    }
+}
+@media screen and (width: 768px){
+    .card {
+        width: 293px;
+        margin: 0px auto;
+        margin-left: 30%;
+        margin-top: 20px;
+    }
+    .card-wrapper {
+        width: 100%;
+    }
+
+    .card-image{
+        width: 100%;
+    }
+}
+@media screen and (width: 1024px){
+    .card {
+        width: 293px;
+        margin: 0px auto;
+        margin-left: 14%;
+        margin-top: 20px;
+    }
+    .card-wrapper {
+        width: 100%;
+    }
+
+    .card-image{
+        width: 100%;
+    }
 }
